<resources>
    <string name="app_name">Qual o Carro?</string>
    <string name="type_the_board">Digite a placa do veículo que deseja pesquisar:</string>
    <string name="search">Buscar</string>
    <string name="placeholder_board">AAA-0000</string>
    <string name="about">Sobre</string>
    <string name="developer">Desenvolvido por: Emanuel R. Galvão</string>
    <string name="developer_email">emrogalvao@gmail.com</string>
    <string name="developer_github">github.com/emanuelgalvao</string>
    <string name="developer_linkedin">linkedin.com/in/emanuel-galvao</string>
    <string name="vehicle_data">Dados do veículo</string>
    <string name="brand">Marca: %s</string>
    <string name="year">Ano: %s</string>
    <string name="color">Cor: %s</string>
    <string name="chassi">Chassi: %s</string>
    <string name="board">Placa: %s</string>
    <string name="city_state">Cidade/Estado: %s</string>
    <string name="situation">Situação: %s</string>
</resources>