<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="350dp"
    android:padding="16dp"
    android:background="@color/background_secondary">

    <TextView
        android:id="@+id/text_vehicle_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp"
        android:text="@string/vehicle_data"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_dark" />

    <ImageView
        android:id="@+id/image_close"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/text_vehicle_data"
        app:layout_constraintBottom_toBottomOf="@id/text_vehicle_data"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_close"
        app:tint="@color/icon_red" />

    <TextView
        android:id="@+id/text_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_vehicle_data"
        android:layout_marginTop="16dp"
        android:text="@string/brand"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_brand_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_brand"
        app:layout_constraintTop_toTopOf="@id/text_brand"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/text_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_brand_value"
        android:layout_marginTop="5dp"
        android:text="@string/year"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_year_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_year"
        app:layout_constraintTop_toTopOf="@id/text_year"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_year_value"
        android:layout_marginTop="5dp"
        android:text="@string/color"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_color_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_color"
        app:layout_constraintTop_toTopOf="@id/text_color"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/text_chassi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_color_value"
        android:layout_marginTop="5dp"
        android:text="@string/chassi"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_chassi_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_chassi"
        app:layout_constraintTop_toTopOf="@id/text_chassi"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/text_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_chassi_value"
        android:layout_marginTop="5dp"
        android:text="@string/board"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_board_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_board"
        app:layout_constraintTop_toTopOf="@id/text_board"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/text_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_board_value"
        android:layout_marginTop="5dp"
        android:text="@string/city_state"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_city_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_city"
        app:layout_constraintTop_toTopOf="@id/text_city"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/text_situation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_city_value"
        android:layout_marginTop="5dp"
        android:text="@string/situation"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_situation_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_situation"
        app:layout_constraintTop_toTopOf="@id/text_situation"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textAllCaps="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>