<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="350dp"
    android:padding="16dp"
    android:background="@color/background_secondary">

    <TextView
        android:id="@+id/text_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about"
        android:textAllCaps="true"
        android:textColor="@color/text_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_close"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/text_about"
        app:layout_constraintBottom_toBottomOf="@id/text_about"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_close"
        app:tint="@color/icon_red" />

    <TextView
        android:id="@+id/text_developer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_about"
        android:layout_marginTop="16dp"
        android:text="@string/developer"
        android:textColor="@color/text_dark"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/image_email"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_developer"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/image_email"
        app:layout_constraintTop_toTopOf="@id/image_email"
        app:layout_constraintBottom_toBottomOf="@id/image_email"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:text="@string/developer_email"
        android:textColor="@color/text_dark"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/image_github"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/image_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_github" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/image_github"
        app:layout_constraintTop_toTopOf="@id/image_github"
        app:layout_constraintBottom_toBottomOf="@id/image_github"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:text="@string/developer_github"
        android:textColor="@color/text_dark"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/image_linkedin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/image_github"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_linkedin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/image_linkedin"
        app:layout_constraintTop_toTopOf="@id/image_linkedin"
        app:layout_constraintBottom_toBottomOf="@id/image_linkedin"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:text="@string/developer_linkedin"
        android:textColor="@color/text_dark"
        android:textSize="16sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>