<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".ui.activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="170dp"
        android:background="@drawable/shape_rounded_top_left">

        <TextView
            android:id="@+id/text_type_board"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/type_the_board"
            android:textColor="@color/text_dark"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/input_board"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_type_board"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rounded_input"
            android:hint="@string/placeholder_board"
            android:textColorHint="@color/text_gray"
            android:textColor="@color/text_dark"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textAllCaps="true"
            android:inputType="text"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_board"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/shape_rounded_button">

            <TextView
                android:id="@+id/text_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/search"
                android:textAllCaps="true"
                android:textColor="@color/text_ligth"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="8dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/car" />

    <ImageView
        android:id="@+id/image_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_info"
        app:tint="@color/icon_ligth" />

</androidx.constraintlayout.widget.ConstraintLayout>